# mission_fastAPI

./: main.py  models.py  predict.py  pyproject.toml  readme.md  result.py  utils.py
model/: best.pt  best.ts  data.yml  model.yml
src/: trainer.py
src/utils/: data.py
templates/: file_upload.html
